--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "",
-    "password": "S9H1L@143",
+    "email": "kitasjam@haren.uk",
+    "password": "__ABHIPIE007",
     "2FASecret": "",
     "i_user": "",
     "proxy": null,
