--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "facebookAccount": {
-    "email": "61552669767015",
+    "email": "clis7@dmxs8.com",
     "password": "__ABHIPIE007",
     "2FASecret": "",
     "i_user": "",
