--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "email": "clis7@dmxs8.com",
     "password": "__ABHIPIE007",
     "2FASecret": "",
-    "i_user": "",
+    "i_user": "100007119910249",
     "proxy": 4320,
     "userAgent": "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.0.0 Mobile Safari/537.36",
     "intervalGetNewCookie": 4320,
