--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "facebookAccount": {
-    "email": "tapbed49@haren.uk",
+    "email": "sirgymits@haren.uk",
     "password": "__ABHIPIE007",
     "2FASecret": "",
     "i_user": "",
